# CyA-Template

./: .gitignore  CMakeLists.txt  Makefile  psmt.yml
src/: CMakeLists.txt  main.cc
test/: CMakeLists.txt  main-test.cc
